--- a/index.html
+++ b/index.html
@@ -5,18 +5,17 @@
 </head>
 <body>
 
+
+
 <h1>SWIMU </h1>
 
 
 <p>Download your training sessions</p>
-<form method="post" enctype="multipart/form-data">
-    <div>
-      <input type="file" accept="text/*,." multiple> 
-    </div>
-    <div>
-      <button>Submit</button>
-    </div>
-  </form>
+
+  <button onclick="USBConnection()">Teste USB</button>
 
 </body>
+
+<script type="module" src="main.js"></script>
+
 </html>
