attemp at communication with arduino

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 
 <h1>SWIMU </h1>
 
+<p> Insira nome do ficheiro para download </p>
+
+<form onclick="requestFile()">
+    <input type="text" id="file_name" name="file_name">
+    <input type="submit" value="Submit">
+</form>
 
 <p>Download your training sessions</p>
 
