Corrected server and serial communication

--- a/index.html
+++ b/index.html
@@ -11,10 +11,8 @@
 
 <p> Insira nome do ficheiro para download </p>
 
-<form onclick="requestFile()">
     <input type="text" id="file_name" name="file_name">
-    <input type="submit" value="Submit">
-</form>
+    <button onclick="requestFile()">Submit</button>
 
 <p>Download your training sessions</p>
 
@@ -22,6 +20,6 @@
 
 </body>
 
-<script type="module" src="main.js"></script>
+<script  src="index.js"></script>
 
 </html>
