broswer file changes

--- a/browser/index.html
+++ b/browser/index.html
@@ -1,25 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>SWIMU</title>
 </head>
 <body>
 
-
-
 <h1>SWIMU </h1>
+
+<div id="file_list" onload="showList()">
+
+</div>
 
 <p> Insira nome do ficheiro para download </p>
 
-    <input type="text" id="file_name" name="file_name">
-    <button onclick="requestFile()">Submit</button>
-
-<p>Download your training sessions</p>
-
-  <button onclick="USBConnection()">Teste USB</button>
+  <input type="text" id="file_name" name="file_name">
+  <button onclick="requestFile()">Submit</button>
 
 </body>
 
-<script  src="index.js"></script>
+<script src="index.js"></script>
 
 </html>
