add retry logic to endpoints

--- a/browser/index.html
+++ b/browser/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>SWIMU</title>
 </head>
-<body onload="showList()">
+<body onload="showListWithRetry()">
 
 <h1>SWIMU </h1>
 
@@ -15,7 +15,7 @@
 <p> Insira nome do ficheiro para download </p>
 
   <input type="text" id="file_name" name="file_name">
-  <button onclick="requestFile()">Submit</button>
+  <button onclick="requestFileWithRetry()">Submit</button>
 
 </body>
 
