--- a/browser/index.html
+++ b/browser/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <title>SWIMU</title>
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
 </head>
 <body onload="listSessionsWithRetry()">
 
@@ -17,6 +19,10 @@
   <input type="text" id="file_name" name="file_name">
   <button onclick="requestFileWithRetry()">Submit</button>
 
+  <div style="width: 800; height: 600">
+    <canvas id="bar-chart">
+    </canvas>
+ </div>
 </body>
 
 <script src="index.js"></script>
