--- a/browser/index.html
+++ b/browser/index.html
@@ -29,7 +29,7 @@
   <header>
     <nav>
       <a href="index.html" id="logo">
-        <image src="../images/logo.png" height="45px" />
+        <image src="../images/oglogo.png" height="40px" />
       </a>
       <i class="fas fa-bars" id="ham-menu"></i>
       <ul id="nav-bar">
@@ -41,9 +41,6 @@
         </li>
         <li>
           <a href="help.html">Help</a>
-        </li>
-        <li>
-          <a href="about.html">About</a>
         </li>
       </ul>
     </nav>
@@ -66,17 +63,17 @@
         <div class="square_info">
           <div class="round-icon"><i class="fas fa-person-swimming"></i></div>
           <div class="left-title">Total Strokes:</div>
-          <div class="left-value" id="totalStrokes">0</div>
+          <div class="left-value" id="totalStrokes"></div>
         </div>
         <div class="square_info">
           <div class="round-icon"><i class="fas fa-water-ladder"></i></div>
           <div class="left-title">Total Laps:</div>
-          <div class="left-value" id="totalLaps">0</div>
+          <div class="left-value" id="totalLaps"></div>
         </div>
         <div class="square_info">
           <div class="round-icon"><i class="fas fa-flag"></i></div>
-          <div class="left-title">Total Meters:</div>
-          <div class="left-value" id="totalMeters">0</div>
+          <div class="left-title">Apx. Distance:</div>
+          <div class="left-value" id="totalMeters"></div>
         </div>
       </div>
       <div class="info_middle">
