--- a/browser/compare.html
+++ b/browser/compare.html
@@ -66,24 +66,24 @@
         <div class="leaderboard">
           <ol>
               <li>
-                  <mark>July 1, 2023 at 6:26 PM</mark>
-                  <small>35</small>
+                  <mark>Loading...</mark>
+                  <small>-</small>
               </li>
               <li>
-                  <mark>June 28, 2023 at 10:53 PM</mark>
-                  <small>31</small>
+                <mark>Loading...</mark>
+                <small>-</small>
               </li>
               <li>
-                  <mark>June 19, 2023 at 7:25 PM</mark>
-                  <small>29</small>
+                <mark>Loading...</mark>
+                <small>-</small>
               </li>
               <li>
-                  <mark>May 30, 2023 at 8:08 AM</mark>
-                  <small>24</small>
+                  <mark>Loading...</mark>
+                  <small>-</small>
               </li>
               <li>
-                  <mark>June 1, 2023 at 13:04 PM</mark>
-                  <small>33</small>
+                  <mark>Loading...</mark>
+                  <small>-</small>
               </li>
           </ol>
       </div>
